# i100009

./: README.md  config.toml  pyproject.toml
src/pgedit/: __init__.py
src/pgedit/cli/: app.py
src/pgedit/core/: benchmark.py  config.py  core_module_a.py  core_module_b.py
src/pgedit/drivers/: __init__.py  ina236.py
src/pgedit/extensions/hello_world/: hello_world.c
src/pgedit/extensions/worker/: worker.c  worker.pyx
src/pgedit/gui/: __init__.py  app.py  main.qml
src/pgedit/include/: pymodule.h
src/pgedit/logger/: logger_module.py
src/pgedit/utils/: utilities.py
src/pymodule/: __init__.py
src/pymodule/cli/: app.py
src/pymodule/core/: benchmark.py  config.py
src/pymodule/extensions/hello_world/: hello_world.c
src/pymodule/extensions/worker/: worker.c  worker.pyx
tests/core/: test_config.py  test_core_module_a.py  test_core_module_b.py
tests/drivers/: test_ina236.py
tests/utils/: test_utilities.py
